# pathdetr

./: .gitignore  README.md  pyproject.toml
docs/: pannuke_dataset.md  pannuke_dataset_stats.json
experiments/: benchmark_batch_scaling.py  calibrate_thresholds.py  eval_sahi.py  run_3fold_cv.py  train_pannuke.py
mhc_path/config/: class_maps.py  reproducibility.py
mhc_path/data/: converters.py  dataset.py  gpu_augmentation.py  stain_augmentation.py
mhc_path/evaluation/: detr_diagnostics.py  metrics.py  sahi.py  watershed.py
mhc_path/models/: backbone_adapter.py  box_utils.py  decoder.py  eomt_decoder.py  fpn.py  mhc_path.py  ms_deform_attn.py  util.py
mhc_path/training/: denoising.py  detection_engine.py  eomt_loss.py  logger.py  losses.py
tests/: test_backbone.py  test_config.py  test_data.py  test_decoder.py  test_evaluation.py  test_fpn.py  test_model.py  test_training.py
